tests/regression/errors/basic/syntax_error_20.csd
// Syntax error test 20 - missing semicolon
sus x drip = 20
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
